Fix hamburgermenu z-index

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -7,6 +7,4 @@
   position: fixed;
   right: 2rem;
   bottom: 2rem;
-
-  z-index: 999;
 }
