--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -1,7 +1,7 @@
 //Hamburger menu Icon
 .button-menu {
   position: absolute;
-  z-index: 6000;
+  z-index: 6;
   top: 0.2em;
   left: 0.5em;
 }
@@ -32,7 +32,7 @@
 .sidebar {
   position: absolute;
   padding: 2.5em 10px 0;
-  z-index: 5000;
+  z-index: 5;
   height: 100vh;
   width: 20em;
   background: #8d1717;
