--- a/app/assets/stylesheets/wissle.css.scss
+++ b/app/assets/stylesheets/wissle.css.scss
@@ -6,3 +6,7 @@
 .text-gray {
   color: #979697;
 }
+
+.on-top {
+  z-index: 9999999;
+}
